--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/vue": "^2.0.0",
     "@types/webpack": "^5.28.0",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
