--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/node": "^18.8.2",
     "@types/vue": "^2.0.0",
     "@types/webpack": "^5.28.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
@@ -23,6 +26,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "monaco-editor": "^0.34.0",
     "vue": "^3.2.40"
   }
 }
