--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/node": "^18.8.2",
     "@types/vue": "^2.0.0",
     "@types/webpack": "^5.28.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
